closed container div correctly
to avoid horizontal scrolling on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ font-family: 'Bellota Text', cursive; */
   --heading-font-family: "Bellota Text";
   --paragraph-font-family: "Advent Pro";
 }
+
 h1 {
   font-family: var(--heading-font-family);
   font-weight: bold;
@@ -19,12 +20,15 @@ h3 {
 .hero {
   background-color: var(--primary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
+  max-width: 100%;
+  border-radius: 5px;
+  margin: 5px 12px;
 }
 .btn-branding {
   background: var(--querternary-color);
   color: var(--primary-color);
-  border-radius: 4px;
+  border-radius: 5px;
   font-size: 18px;
   font-family: var(--heading-font-family);
   line-height: 27px;
@@ -34,9 +38,10 @@ h3 {
 .introduction img,
 p {
   border-radius: 5px;
-  padding: 5px;
+  padding: 10px;
   border: var(--querternary-color) 1px solid;
-  margin: 25px;
+  margin: 5px 0px 5px 0px;
+  max-width: 100%;
 }
 .introduction p {
   font-size: 25px;
@@ -46,8 +51,5 @@ p {
 @media (max-width: 768px) {
   .introduction {
     text-align: center;
-  }
-  .hero {
-    padding: 80px 10px;
   }
 }
